<resources>
    <string name="app_name">MEPhI</string>
    <string name="image_logo">image_logo</string>
    <string name="text_logo">text_logo</string>
    <string name="signup_button_text">Войти</string>
    <string name="textview_login">Вход</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
</resources>