<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">


    <TextView
        android:id="@+id/login"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/textview_login"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="0sp"
        app:boxCornerRadiusBottomStart="0sp"
        app:boxCornerRadiusTopEnd="20sp"
        app:boxCornerRadiusTopStart="20sp"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:drawablePadding="5sp"
            android:nextFocusForward="@id/field_password"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="20sp"
        app:boxCornerRadiusBottomStart="20sp"
        app:boxCornerRadiusTopEnd="0sp"
        app:boxCornerRadiusTopStart="0sp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/pass_lock"
            android:drawablePadding="5sp"
            android:inputType="textPassword"
            android:nextFocusForward="@id/button_login"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="0sp"
        android:layout_height="75sp"
        android:layout_marginBottom="8dp"
        android:text="@string/signup_button_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="normal"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/forgot_pass"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:rippleColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>